--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-.container form input {
+form input {
   width: 46%;
   margin: 20px 1%;
   background: transparent;
@@ -11,7 +11,7 @@
   color: #fff;
   font-weight: bold;
 }
-.container form textarea {
+form textarea {
   width: 96%;
   margin: 20px 1%;
   padding: 8px 10px;
@@ -26,11 +26,11 @@
   color: #fff;
   font-weight: bold;
 }
-.container form input:focus {
+ form input:focus {
   outline: none;
   border-bottom: 3px solid rgba(255, 255, 255, 1);
 }
-.container form textarea:focus {
+ form textarea:focus {
   outline: none;
   border-bottom: 3px solid rgba(255, 255, 255, 1);
 }
