--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,15 @@
+body {
+    background-color: lightcoral;
+}
+
+h1{
+    font-family: "Poppins", sans-serif;
+  font-size: 40px;
+  text-align: center;
+  color: rgb(255, 255, 255);
+  padding-bottom: 70px;
+}
+
 form input {
   width: 46%;
   margin: 20px 1%;
@@ -36,4 +48,22 @@ form textarea {
 }
 ::placeholder {
   color: #fff;
+}
+
+.btn_one {
+  font-size: 18px;
+  font-family: "Josefin Sans", sans-serif;
+  color: #fff;
+  background: transparent;
+  border: 3px solid #fff;
+  padding: 8px 40px;
+  border-radius: 80px;
+  font-weight: bold;
+  margin: 2vh 10px;
+  transition: 0.4s ease-in-out;
+}
+.btn_one:hover {
+  cursor: pointer;
+  color: rgb(104, 3, 3);
+  background: #fff;
 }
